--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,77 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@plugin '@tailwindcss/forms';
+
+@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
+@source '../../storage/framework/views/*.php';
+
+@theme {
+  --font-sans:
+    Figtree, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
+
+@theme{
+  --color-primary-50: '#f0f9ff',
+  --color-primary-100: '#e0f2fe',
+  --color-primary-200: '#bae6fd',
+  --color-primary-300: '#7dd3fc',
+  --color-primary-400: '#38bdf8',
+  --color-primary-500: '#0ea5e9',
+  --color-primary-600: '#0284c7',
+  --color-primary-700: '#0369a1',
+  --color-primary-800: '#075985',
+  --color-primary-900: '#0c4a6e',
+
+  --color-primary-50: '#f9fafb',
+  --color-primary-100: '#f3f4f6',
+  --color-primary-200: '#e5e7eb',
+  --color-primary-300: '#d1d5db',
+  --color-primary-400: '#9ca3af',
+  --color-primary-500: '#6b7280',
+  --color-primary-600: '#4b5563',
+  --color-primary-700: '#374151',
+  --color-primary-800: '#1f2937',
+  --color-primary-900: '#111827',
+  --color-primary-500: #0ea5e9;
+
+
+  --animate-fade-in: fadeIn 0.5s ease-in-out;
+  --animate-fade-out: fadeOut 0.5s ease-in-out;
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+}
+
+@layer components{
+
+  .btn-primary{
+    @apply bg-primary-500 text-white hover:bg-primary-600 ;
+  }
+
+}
