--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,6 +20,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
   *,
   ::after,
   ::before,
@@ -29,30 +30,28 @@
   }
 }
 
-@theme{
+@theme {
   --color-primary-50: '#f0f9ff',
-  --color-primary-100: '#e0f2fe',
-  --color-primary-200: '#bae6fd',
-  --color-primary-300: '#7dd3fc',
-  --color-primary-400: '#38bdf8',
-  --color-primary-500: '#0ea5e9',
-  --color-primary-600: '#0284c7',
-  --color-primary-700: '#0369a1',
-  --color-primary-800: '#075985',
-  --color-primary-900: '#0c4a6e',
+    --color-primary-100: '#e0f2fe',
+    --color-primary-200: '#bae6fd',
+    --color-primary-300: '#7dd3fc',
+    --color-primary-400: '#38bdf8',
+    --color-primary-500: '#0ea5e9',
+    --color-primary-600: '#0284c7',
+    --color-primary-700: '#0369a1',
+    --color-primary-800: '#075985',
+    --color-primary-900: '#0c4a6e',
 
-  --color-primary-50: '#f9fafb',
-  --color-primary-100: '#f3f4f6',
-  --color-primary-200: '#e5e7eb',
-  --color-primary-300: '#d1d5db',
-  --color-primary-400: '#9ca3af',
-  --color-primary-500: '#6b7280',
-  --color-primary-600: '#4b5563',
-  --color-primary-700: '#374151',
-  --color-primary-800: '#1f2937',
-  --color-primary-900: '#111827',
-  --color-primary-500: #0ea5e9;
-
+    --color-gray-50: #f9fafb;
+  --color-gray-100: #f3f4f6;
+  --color-gray-200: #e5e7eb;
+  --color-gray-300: #d1d5db;
+  --color-gray-400: #9ca3af;
+  --color-gray-500: #6b7280;
+  --color-gray-600: #4b5563;
+  --color-gray-700: #374151;
+  --color-gray-800: #1f2937;
+  --color-gray-900: #111827;
 
   --animate-fade-in: fadeIn 0.5s ease-in-out;
   --animate-fade-out: fadeOut 0.5s ease-in-out;
@@ -68,10 +67,9 @@
   }
 }
 
-@layer components{
+/* @layer components {
 
-  .btn-primary{
-    @apply bg-primary-500 text-white hover:bg-primary-600 ;
-  }
+  .btn-primary {
+    @apply bg-primary-500 text-white hover:bg-primary-600;
+  } */
 
-}
