data table add done

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,23 @@
+
+@import url('datatables.net-dt');
+@import url('datatables.net-autofill-dt');
+@import url('datatables.net-buttons-dt');
+@import url('datatables.net-colreorder-dt');
+@import url('datatables.net-fixedcolumns-dt');
+@import url('datatables.net-fixedheader-dt');
+@import url('datatables.net-responsive-dt');
+@import url('datatables.net-rowreorder-dt');
+@import url('datatables.net-scroller-dt');
+@import url('datatables.net-searchbuilder-dt');
+
 @import 'tailwindcss';
+@plugin "daisyui";
 
 @plugin '@tailwindcss/forms';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
+@source "../views";
+@source '../../**';
 @source '../../storage/framework/views/*.php';
 
 @theme {
@@ -10,7 +25,7 @@
     Figtree, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
-
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
