--- a/public/assets/css/datatable.css
+++ b/public/assets/css/datatable.css
@@ -26,7 +26,7 @@
 
 .dataTable .reorder:hover {
     transform: scale(1.1);
-    color: var(--primary-color) !important;
+    color: var(--primary-50) !important;
 }
 
 .dt-container .dt-buttons {
