--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -26,14 +26,31 @@
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
+@theme {
+  --breakpoint-xs: 480px;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1440px;
+  --breakpoint-3xl: 1600px;
+  --breakpoint-4xl: 1920px;
+  --breakpoint-5xl: 2560px;
+
+  --animate-scalePulse: scalePulse 2s ease-in-out infinite;
+
+  @keyframes scalePulse {
+    0% {
+      transform: scale(1);
+    }
+
+    50% {
+      transform: scale(1.02);
+    }
+  }
+}
+
 @layer base {
 
   *,
@@ -81,7 +98,9 @@
     }
   }
 }
-
+.input {
+  @apply focus:outline-0 focus-within:outline-0 focus:ring-0 focus:border-emerald-500 focus-within:border-emerald-500 w-full;
+}
 /* @layer components {
 
   .btn-primary {
