--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -63,6 +63,7 @@
 }
 
 @theme {
+  
   --color-primary-50: '#f0f9ff',
     --color-primary-100: '#e0f2fe',
     --color-primary-200: '#bae6fd',
@@ -84,9 +85,135 @@
   --color-gray-700: #374151;
   --color-gray-800: #1f2937;
   --color-gray-900: #111827;
+     /* Font Family */
+    --font-inter: 'Inter', sans-serif;
+
+    /* ===================================  Colors =================================== */
+
+    /* Background Colors */
+    --color-bg-white: #ffffff;
+    --color-bg-black: #000000;
+    --color-bg-primary: oklch(70.4% 0.14 182.503);
+    --color-bg-secondary: oklch(69.6% 0.17 162.48);
+    --color-bg-active: #e7eceb;
+
+    --color-bg-dark-primary: #1A1C20;
+    --color-bg-dark-secondary: #17181C;
+    --color-bg-dark-tertiary: #26292F;
+    --color-bg-dark-muted: #7D8184;
+    --color-bg-dark-active: #E2F0ED;
+
+    --color-bg-light-primary: #F8F8FA;
+    --color-bg-light-secondary: #FDFDFD;
+    --color-bg-light-tertiary: oklch(70.4% 0.14 182.503);
+
+    --color-bg-light-muted: #BEC3C4;
+    --color-bg-light-active: #E2F0ED;
+
+    /* Text Color  */
+    --color-text-white: #ffffff;
+    --color-text-black: #000000;
+    --color-text-active: #1CA577;
+
+    --color-text-dark-primary: #ffffff99;
+    /* done */
+    --color-text-dark-secondary: #222831;
+    --color-text-dark-tertiary: #f0fdfa;
+    --color-text-dark-muted: #BEC3C4;
+    --color-text-dark-active: #1CA577;
+
+    --color-text-light-primary: #1e2939;
+    /* done */
+    --color-text-light-secondary: #4a5565;
+    /* done */
+    --color-text-light-tertiary: #F7F7F7;
+    --color-text-light-muted: #BEC3C4;
+    --color-text-light-active: #1CA577;
+
+    /* Shadow Color  */
+    --color-shadow-white: #ffffff;
+    --color-shadow-black: #000000;
+    --color-shadow-active: #56ab91;
+
+    --color-shadow-dark-primary: #141718;
+    --color-shadow-dark-secondary: #FDFAF6;
+    --color-shadow-dark-tertiary: #F7F7F7;
+    --color-shadow-dark-muted: #111111;
+    --color-shadow-dark-active: #56ab91;
+
+    --color-shadow-light-primary: #141718;
+    --color-shadow-light-secondary: #FDFAF6;
+    --color-shadow-light-tertiary: #F7F7F7;
+    --color-shadow-light-muted: #111111;
+    --color-shadow-light-active: #56ab91;
+
+    /* Border Color */
+    --color-border-white: #ffffff;
+    --color-border-black: #000000;
+    --color-border-active: #56ab91;
+
+    --color-border-dark-primary: #141718;
+    --color-border-dark-secondary: #FDFAF6;
+    --color-border-dark-tertiary: #364153;
+    --color-border-dark-muted: #111111;
+    --color-border-dark-active: #56ab91;
+
+    --color-border-light-primary: #141718;
+    --color-border-light-secondary: #FDFAF6;
+    --color-border-light-tertiary: #d1d5dc;
+    --color-border-light-muted: #111111;
+    --color-border-light-active: #56ab91;
+
+    /* Focus Color */
+    --color-focus-white: #ffffff;
+    --color-focus-black: #000000;
+    --color-focus-active: #56ab91;
+
+    --color-focus-dark-primary: #141718;
+    --color-focus-dark-secondary: #FDFAF6;
+    --color-focus-dark-tertiary: #F7F7F7;
+    --color-focus-dark-muted: #111111;
+    --color-focus-dark-active: #56ab91;
+
+    --color-focus-light-primary: #141718;
+    --color-focus-light-secondary: #FDFAF6;
+    --color-focus-light-tertiary: #F7F7F7;
+    --color-focus-light-muted: #111111;
+    --color-focus-light-active: #56ab91;
+
+    /* Outline Color */
+    --color-outline-white: #ffffff;
+    --color-outline-black: #000000;
+    --color-outline-active: #56ab91;
+
+    --color-outline-dark-primary: #141718;
+    --color-outline-dark-secondary: #FDFAF6;
+    --color-outline-dark-tertiary: #F7F7F7;
+    --color-outline-dark-muted: #111111;
+    --color-outline-dark-active: #56ab91;
+
+    --color-outline-light-primary: #141718;
+    --color-outline-light-secondary: #FDFAF6;
+    --color-outline-light-tertiary: #F7F7F7;
+    --color-outline-light-muted: #111111;
+    --color-outline-light-active: #56ab91;
+     /* Grandient Colors */
+    --color-gradient-light-primary: #faf9f9;
+    --color-gradient-light-secondary: #fcfbfd;
+    --color-gradient-light-tertiary: #FBFBFB;
+    --color-gradient-light-quaternary: #d1d5dc;
+    --color-gradient-light-quinary: #56ab91;
+
+    --color-gradient-dark-primary: #111318;
+    --color-gradient-dark-secondary: #0f1815;
+    --color-gradient-dark-tertiary: #140e20;
+    --color-gradient-dark-quaternary: #ffffff0c;
+    --color-gradient-dark-quinary: #ffffff0a;
 
   --animate-fade-in: fadeIn 0.5s ease-in-out;
   --animate-fade-out: fadeOut 0.5s ease-in-out;
+    --shadow-glass-card : rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 
   @keyframes fadeIn {
     from {
@@ -101,6 +228,9 @@
 .input {
   @apply focus:outline-0 focus-within:outline-0 focus:ring-0 focus:border-emerald-500 focus-within:border-emerald-500 w-full;
 }
+ .glass-card {
+        @apply backdrop-blur-md bg-gradient-to-tr from-white/50 to-gradient-light-quaternary/20 shadow-glass-card;
+    }
 /* @layer components {
 
   .btn-primary {
